--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,11 @@
-<h1> Register </h1>
+<center><h1> Register </h1></center>
 
 <%= form_with url: "/users", method: :post, local: true do |f| %>
-  <p><%= f.label :name %></p>
-  <p><%= f.text_field :name %></p> <br>
-  <p><%= f.label :email %></p>
-  <p><%= f.text_field :email %></p> <br>
-  <p><%= f.submit  "Submit"%></p>
+  <center><%= f.label :name %>
+  <%= f.text_field :name %></center>
+   <br>
+  <center><%= f.label :email %>
+  <%= f.text_field :email %></center>
+   <br>
+  <center><%= f.submit  "Submit"%></center>
 <% end %>
