--- a/app/views/application/landing.html.erb
+++ b/app/views/application/landing.html.erb
@@ -1,6 +1,7 @@
-<div class="row" align="center" id="button">
+<p><div align="center" id="button">
       <%= button_to("Create a New User", new_user_path, method: :get)%>      
-</div>
+</div></p>
+<br>
 
 <div align="center" id="existing_users">
   <h3>Existing Users:</h2>
