--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,15 +1,62 @@
-<h1><%= @movie.title %></h1>
-
-<%=button_to "Create Viewing Party for #{@movie.title}", new_user_movie_viewing_party_path(@user, @movie.id), method: :get %>
-
-<p>Vote Average: <%= @movie.vote_average %></p>
-<p>Runtime: <%= "#{@movie.runtime}mins" %></p>
 
 
-<p>Genre: <% @movie.genres.each do |genre|%>
-          <%= genre[:name] %></p>
-          <% end  %>
-<h3><%=@movie.summary%></h3>
+<p>
+<div class="container" align="center" id="movie-info">
+  <div class="col-md-12 text-center">
+    <h1><%= @movie.title %></h1>
+    <p><div class="container" align="center">
+      <%= button_to "Discover Page", user_discover_index_path(@user), method: :get %>
+    </div></p>
+    <p><div class="container" align="center">
+      <%=button_to "Create Viewing Party for #{@movie.title}", new_user_movie_viewing_party_path(@user, @movie.id), method: :get %>
+    </div></p>
 
 
-<%= button_to "Discover Page", user_discover_index_path(@user), method: :get %>
+    <div class="card-deck" align="center">
+      <div class="card-block" align="center">
+        <div class="card mb-3 col-lg-4 d-flex align-items-stretch" style="max-width: 60rem;">
+          <div class="card-title">
+            <div id="wrapper">
+              <h6 class="align-left">Vote Average: <%= @movie.vote_average %></h6>
+              <h6 class="align-center">Runtime: <%= "#{@movie.runtime}mins" %></h6>
+              <h6 class="align-right">Genre: <% @movie.genres.each do |genre|%>
+                                              <%= genre[:name] %>,
+                                              <% end %></h6>
+            </div>
+            <style>
+            h1.align-left {
+                text-align:left;
+                padding:0;
+                margin:0;
+                position:absolute;
+            }
+
+            h1.align-center{
+              text-align: center;
+            }
+            </style>
+          </div>
+          <div class="card-body">
+            <p class="card-text">
+            <ul class="host list-group">
+              <li class="list-group-item">
+              <h5>Summary</h5>
+              <div><%=@movie.summary%></div>
+              </li>
+              <li class="list-group-item">
+              <h5>Cast</h5>
+              <div>PUT CAST HERE</div>
+              </li>
+              <li class="list-group-item">
+              <h5>Reviews</h5>
+              <div>PUT REVIEWS HERE</div>
+              </li>
+            </ul>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</p>
