--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,12 @@
-<div class="container">
+<p><div class="container">
   <h1 align="center"> <%= @user.name %>'s Dashboard </h1>
-</div>
+</div></p> 
+<p>
 <div class="container" align="center" id="discover_movies">
       <%= button_to("Discover Movies", user_discover_index_path(@user), method: :get)%>      
 </div>
-
+</p>
+<p>
 <div class="container" align="center" id="viewing_parties">
   <div class="col-md-12 text-center">
     <h2>Viewing Parties</h2>
@@ -48,3 +50,4 @@
     </div>
   </div>
 </div>
+</p>
