Refactor: Update to allow for new password attribute

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,5 +7,8 @@
   <center><%= f.label :email %>
   <%= f.text_field :email %></center>
    <br>
+  <center><%= f.label :password %>
+  <%= f.text_field :password %></center>
+   <br>
   <center><%= f.submit  "Submit"%></center>
 <% end %>
