--- a/app/views/application/landing.html.erb
+++ b/app/views/application/landing.html.erb
@@ -1,6 +1,14 @@
-<p><div align="center" id="button">
+<p>
+<div align="center" id="button">
+      <%= button_to("Log In", login_form_path, method: :get)%>      
+</div>
+</p>
+
+<p>
+<div align="center" id="button">
       <%= button_to("Create a New User", new_user_path, method: :get)%>      
-</div></p>
+</div>
+</p>
 <br>
 
 <div align="center" id="existing_users">
