--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -5,7 +5,7 @@
   <div class="col-md-12 text-center">
     <h1><%= @movie.title %></h1>
     <p><div class="container" align="center">
-      <%= button_to "Discover Page", user_discover_index_path(@user), method: :get %>
+      <%= button_to "Discover Page", discover_index_path, method: :get %>
     </div></p>
     <p><div class="container" align="center">
       <%=button_to "Create Viewing Party for #{@movie.title}", new_user_movie_viewing_party_path(@user, @movie.id), method: :get %>
