--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 </div></p> 
 <p>
 <div class="container" align="center" id="discover_movies">
-      <%= button_to("Discover Movies", user_discover_index_path(@user), method: :get)%>      
+      <%= button_to("Discover Movies", discover_index_path, method: :get)%>      
 </div>
 </p>
 <p>
