--- a/app/views/viewing_party/new.html.erb
+++ b/app/views/viewing_party/new.html.erb
@@ -1,7 +1,7 @@
 <center><h2>Create A Movie Party for <%= @movie.title %></h2></center>
 <p>
 <div class="container" align="center" id="discover_movies">
-      <%= button_to("Discover Movies", user_discover_index_path(@user), method: :get)%>      
+      <%= button_to("Discover Movies", discover_index_path, method: :get)%>      
 </div>
 </p>
 <p>
