Refactor: Update routes to use authentication token

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -8,7 +8,7 @@
       <%= button_to "Discover Page", discover_index_path, method: :get %>
     </div></p>
     <p><div class="container" align="center">
-      <%=button_to "Create Viewing Party for #{@movie.title}", new_user_movie_viewing_party_path(@user, @movie.id), method: :get %>
+      <%=button_to "Create Viewing Party for #{@movie.title}", new_movie_viewing_party_path(@movie.id), method: :get %>
     </div></p>
 
 
