--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -7,7 +7,7 @@
   <% if @data != nil %>
     <% @data.each do |movie| %>
       <li>
-       <%= link_to movie.title, user_movie_path(@user, movie.id) %>
+       <%= link_to movie.title, movie_path(movie.id) %>
         - (Vote Average: <%= movie.vote_average %>)
       </li>
     <% end  %>
