--- a/app/views/viewing_party/new.html.erb
+++ b/app/views/viewing_party/new.html.erb
@@ -17,7 +17,7 @@
             <p class="card-text">
             <ul class="host list-group">
               <li class="list-group-item">
-              <%= form_with url: user_movie_viewing_party_index_path(@user, @movie.id), method: :post, local: true do |form| %>
+              <%= form_with url: new_movie_viewing_party_path(@movie.id), method: :post, local: true do |form| %>
               <h6><b>Movie Title:</b> <%= @movie.title %></h6>
               <br>
               <center><%= form.label :duration %>
