--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,16 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= link_to "Home", "/" %>
+    <% if current_user %>
+      <div align="right">
+        <%= button_to("Logout", logout_path, method: :delete) %>
+      </div>
+    <% else %>
+      <div align="right" id="button">
+            <%= button_to("Log In", login_form_path, method: :get)%>      
+            <%= button_to("Create a New User", new_user_path, method: :get)%>      
+      </div>
+    <% end %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
